--- a/README
+++ b/README
@@ -1,3 +1,19 @@
-The Euruko Conf 2009 Application
-=========================
-We are trying to develop a simple application for management the info and registration of Euruko 2009.
+# The Euruko Conf 2009 Application
+
+## 
+
+
+## Screens (mirar /doc/screens)
+
+### 01 Layout Invitado
+
+Los usuarios no logeados podrán acceder a parte de la aplicación.
+Cuando el usuario activo no está logeado tiene siempre presente el formulario de login en el que está envevido un link para Registrarse si es lo que desea.
+
+### 02 Layout Usuario
+
+Se diferencia del Layout de Invitado en que no le aparece el formulario de login y en su lugar aparece un menú con opciones de Usuario Registrado.
+
+### 03 Layout de Admin
+
+Se diferencia del Layout de Usuario en que 
